layout bug fixes

--- a/05_17_21_Stats_Preview_Component_Card/Production/style.css
+++ b/05_17_21_Stats_Preview_Component_Card/Production/style.css
@@ -88,6 +88,9 @@ li + li {
 
 .card-copy {
   padding: 1.75rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
@@ -117,6 +120,12 @@ li + li {
 
 .highlight-text {
   color: var(--accent-color);
+}
+
+.statistic {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .statistic-number {
@@ -154,6 +163,7 @@ li + li {
   }
 
   .card-copy {
+    align-items: flex-start;
     padding-bottom: 59px;
     padding-top: 72px;
     padding-left: 72px;
